--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,5 +10,5 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
   <!-- Bootstrap core CSS -->
-  <link href="/css/bootstrap.min.css" rel="stylesheet">
+  <link href="{{'/css/bootstrap.min.css' | prepend: site.baseurl }}" rel="stylesheet">
 </head>
